# nucleation-wasm

./: .gitignore  README.md  SECURITY.md  diagnose.py  gdelt_monitor.py  pyproject.toml  run_experiments.py
.github/: dependabot.yml
.github/workflows/: ci.yml
api/: README.md  index.html  worker.js  wrangler.toml
compression-conflict-paper/: generate_figures.py  run_experiments.py
compression-conflict-paper/results/: validation_results.json
compression-conflict-paper/src/compression_dynamics/: __init__.py  event_extractor.py
compression-conflict-paper/src/conflict/: gdelt_client.py  ucdp_loader.py
compression-conflict-paper/src/validation/: baselines.py  correlation.py
content/: substack-post-1.md
divergence-engine/: Cargo.toml  README.md  deny.toml
divergence-engine/benches/: divergence_bench.rs
divergence-engine/src/: divergence.rs  error.rs  lib.rs  model.rs  scheme.rs  streaming.rs  wasm.rs
docs/: INDUSTRY-USE-CASES.md
docs/content/: substack-post-1.md
docs/research/compression-conflict-paper/: run_validation.py
docs/research/compression-conflict-paper/paper/: manuscript.md
docs/research/compression-conflict-paper/src/compression_dynamics/: schemes.py  text_extractor.py
docs/research/compression-conflict-paper/src/conflict/: __init__.py  synthetic_data.py
docs/research/compression-conflict-paper/src/validation/: __init__.py  prediction.py
nucleation-paper/: .gitignore  diagnose.py  gdelt_monitor.py  pyproject.toml  run_experiments.py
nucleation-paper/paper/: manuscript.md  manuscript_template.md
nucleation-paper/src/: __init__.py
nucleation-paper/src/data/: __init__.py  loaders.py
nucleation-paper/src/detectors/: __init__.py  nucleation_detectors.py
nucleation-paper/src/evaluation/: __init__.py  harness.py
nucleation-paper/src/simulators/: __init__.py  phase_transitions.py
nucleation-paper/src/visualization/: __init__.py  figures.py
nucleation-rs/: Cargo.toml  README.md
nucleation-rs/pkg-template/: nucleation.d.ts  package.json
nucleation-rs/src/: acr.rs  compression.rs  detector.rs  distance.rs  entropy.rs  lib.rs  shepherd.rs  signal.rs  variance.rs  wasm.rs
