[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nucleation-detection"
version = "1.0.0"
description = "Variance reduction as an early warning signal for phase transitions"
readme = "paper/manuscript_template.md"
license = {text = "MIT"}
authors = [
    {name = "Ryan J Cardwell", email = "orthogonal@proton.me"}
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
plotting = ["matplotlib>=3.5.0"]
dev = ["pytest>=7.0.0", "black>=22.0.0", "mypy>=0.990"]

[project.scripts]
run-nucleation = "run_experiments:main"

[tool.setuptools.packages.find]
where = ["src"]
