[package]
name = "nucleation"
version = "0.2.0"
edition = "2021"
authors = ["Ryan Cardwell <aphotic.noise@gmail.com>"]
description = "Phase transition detection and compression dynamics for early warning systems"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aphoticshaman/nucleation-wasm"
keywords = ["phase-transitions", "early-warning", "compression", "conflict", "wasm"]
categories = ["science", "mathematics", "wasm"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# WASM support
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

# For no_std compatible math
libm = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["std"]
std = []
simd = []
wasm = ["wasm-bindgen", "js-sys", "serde", "serde_json"]
serialize = ["serde", "serde_json"]

[lib]
name = "nucleation"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
